unpackaged/main/default/objects/Referral_Actions__c/Referral_Actions__c.object-meta.xml
<CustomObject>
    <description>This object will be used to track lead or deal actions related to a referral of a referral source.</description>
    <label>Referral Actions</label>
    <nameField>
        <displayFormat>RefAction-{000000}</displayFormat>
        <label>Referral Action#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>