unpackaged/main/default/objects/Referral_Actions__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>This field will identify the action that we are tracking as milestones for the referral source.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Created</fullName>
            </value>
            <value>
                <fullName>CJ Lead Qualified</fullName>
            </value>
            <value>
                <fullName>Credit Sub</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Lead Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>