unpackaged/main/default/objects/Referral_Actions__c/fields/CJ_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>CJ_Action_Type__c</fullName>
    <formula>IF(ISPICKVAL(Action_Type__c, 'Lead Created'), '401551', 
IF(ISPICKVAL(Action_Type__c, 'CJ Lead Qualified'), '401552',
IF(ISPICKVAL(Action_Type__c, 'Credit Sub'), '401553',
IF(ISPICKVAL(Action_Type__c, 'Approved'), '401554',
IF(ISPICKVAL(Action_Type__c, 'Funded'), '401555', '')))))</formula>
    <label>CJ Action Type</label>
    <type>Text</type>
</CustomField>