unpackaged/main/default/objects/Referral_Actions__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be populated with a link to the opportunity associated with a referral action.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Referral Actions</relationshipLabel>
    <relationshipName>Referral_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>